--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,7 @@ data/
 # Claude Code local config  ← machine-specific, not shareable
 # ============================================================
 .claude/
+CLAUDE.md
 
 # ============================================================
 # Local startup scripts (contain absolute local paths)
